tree_sitter_v/grammar.js
    source_file: ($) =>
      seq(
        optional($.module_clause),
        optional($.import_list),
        repeat(
          choice(
            seq($._top_level_declaration, optional(semi)),
            seq($._statement, optional(semi)),
          ),
        ),
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    import_list: ($) => repeat1($.import_declaration),

    import_declaration: ($) => seq('import', $.import_spec, semi),

    import_spec: ($) => seq(
      $.import_path,
      optional($.import_alias),
      optional($.selective_import_list),
    ),

    // foo.bar.baz
    import_path: ($) => seq($._import_name, repeat(seq('.', $._import_name))),

    // foo
    _import_name: ($) => $.identifier,

    // foo as bar
    //     ^^^^^^
    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $.type_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
      ),

    // TODO: нужны ли нам тут атрибуты?
    type_declaration: ($) =>
      seq(
        optional($.visibility_modifiers),
        'type',
        field("name", $.identifier),
        field("generic_parameters", optional($.generic_parameters)),
        "=",
        field("types", $.type_union_list)
      ),

    // int | string | Foo
    function_declaration: ($) => prec.right(PREC.resolve,
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        'fn',
        field('receiver', optional($.receiver)),
        field('name', $._function_name),
        field('generic_parameters', optional($.generic_parameters)),
        field('signature', $.signature),
        field('body', optional($.block))
      )),

    _function_name: ($) => choice($.binded_identifier, $.identifier, $.overloadable_operator),

    signature: ($) => prec.right(seq(
      field(
        'parameters',
        choice($.parameter_list, $.type_only_parameter_list)
      ),
      field('result', optional($._type)),
    )),

    parameter_list: ($) =>
      prec(PREC.resolve, seq("(", comma_sep($.parameter_declaration), ")")),

    parameter_declaration: ($) =>
      seq(
        field('mutability', optional($.mutability_modifiers)),
        field("name", $.identifier),
        optional(field("variadic", "...")),
        field("type", choice($.plain_type, $.option_type))
      ),

    type_only_parameter_list: ($) =>
      seq("(", comma_sep($.type_only_parameter_declaration), ")"),

    type_only_parameter_declaration: ($) =>
      seq(
        optional($.mutability_modifiers),
        optional(field("variadic", "...")),
        field("type", choice($.plain_type, $.option_type))
      ),

    // fn foo[T, T2]() {}
    //       ^^^^^^^
    generic_parameters: ($) =>
      prec(
        PREC.resolve,
        seq(
          choice(token.immediate('['), token.immediate('<')),
          comma_sep1($.generic_parameter),
          optional(','),
          choice(']', '>'),
        )
      ),

    generic_parameter: ($) => $.identifier,


    struct_declaration: ($) =>
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        choice('struct', 'union'),
        field('name', choice($.identifier, $.binded_identifier)),
        field('generic_parameters', optional($.generic_parameters)),
        $._struct_body,
      ),

    _struct_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            seq($.struct_field_scope, optional(terminator)),
            seq($.struct_field_declaration, optional(terminator)),
          ),
        ),
        '}'
      ),

    // pub:
    // mut:
    // pub mut:
    // __global:
    struct_field_declaration: ($) =>
        choice(
          $._struct_field_definition,
          $.embedded_definition,
        ),

    _struct_field_definition: ($) =>
      prec.right(PREC.type_initializer,
        seq(
          field('name', $.field_definition),
          field('type', choice($.plain_type, $.option_type)),
          field('attributes', optional($.attribute)),
          optional(seq('=', field('default_value', $._expression))),
        ),
      ),

    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.type_initializer,
        $.function_literal,
        $.empty_literal_value,
        $.binded_identifier,
        $.reference_expression,
        $._max_group,
        $.map_init_expression,
        $.array_creation,
        $.empty_array_creation,
        $.fixed_array_creation,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.not_is_expression,
        $.index_expression,
        $.slice_expression,
        // $.type_cast_expression,
        $.as_type_cast_expression,
        $.selector_expression,
        $._expression_with_blocks,
        $.enum_fetch,
      ),

    call_expression: ($) => prec.right(PREC.primary, choice(
      seq(
        field('function', token.immediate('json.decode')),
        field('arguments', $.special_argument_list),
        optional($.error_propagate),
      ),
      seq(
        field('name', $._expression),
        field('type_parameters', optional($.type_parameters)),
        field('arguments', $.argument_list),
        optional($.error_propagate),
      )
    )),

    type_parameters: ($) => prec(PREC.resolve,
      seq(
        '[',
        comma_sep1($.plain_type),
        ']',
      )
    ),

    argument_list: ($) => seq(
      '(',
      optional(seq(
        choice($.argument),
        repeat(seq(list_separator, choice($.argument))),
        optional(list_separator)
      )),
      ')'
    ),

    argument: ($) =>
      choice(
        $._expression,
        $.mutable_expression,
        $.keyed_element,
        $.spread_expression,
      ),

    type_initializer: ($) =>
      prec.right(
        PREC.type_initializer,
        seq(
          field('type', $.plain_type),
          field('body', $.type_initializer_body)
        )
      ),

    type_initializer_body: ($) =>
      seq(
        '{',
        optional(
          choice(
            field('element_list', $.element_list),
            // For short struct init syntax
            field('short_element_list', $.short_element_list)
          )
        ),
        '}'
      ),

    function_literal: ($) =>
      prec.right(
        seq(
          'fn',
          field('capture_list', optional($.capture_list)),
          field('generic_parameters', optional($.generic_parameters)),
          field('signature', $.signature),
          field('body', $.block),
        )
      ),

    capture_list: ($) => seq('[', comma_sep($.capture), optional(','), ']'),

    capture: ($) => seq(optional($.mutability_modifiers), $.reference_expression),

    reference_expression: ($) => prec(PREC.primary, $.identifier),
    type_reference_expression: ($) => prec(PREC.primary, $.identifier),

    unary_expression: ($) => prec(PREC.unary, seq(
      field('operator', choice(...unary_operators)),
      field('operand', $._expression)
    )),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.and, '&&'],
        [PREC.or, '||'],
      ];

      return choice(...table.map(([precedence, operator]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ));
    },

    literal: ($) => choice(
      $.int_literal,
      $.float_literal,
      $._string_literal,
      $.rune_literal,
      $.none,
      $.true,
      $.false,
      $.nil,
    ),

    true: ($) => 'true',
    nil: ($) => 'nil',

    map_init_expression: ($) =>
      prec(
        PREC.composite_literal,
        seq(
          '{',
          repeat1(seq($.map_keyed_element, optional(list_separator))),
          '}'
        )
      ),

    map_keyed_element: ($) => seq(
      field('key', $._expression),
      ':',
      field('value', $._expression)
    ),

    pointer_type: ($) => prec(PREC.unary, seq("&", $.plain_type)),

    none_type: ($) => "none",

    int_literal: ($) => token(int_literal),

    _string_literal: ($) =>
      choice(
        $.c_string_literal,
        $.raw_string_literal,
        $.interpreted_string_literal
      ),

    interpreted_string_literal: ($) =>
      interpolated_quoted_string($, $._string_opening),

    identifier: ($) =>
      token(
        seq(
          optional('@'),
          choice(unicode_letter, "_"),
          repeat(choice(letter, unicode_digit))
        ),
      ),

    // Some of the syntaxes in V are restricted
    // to be in a single line. That's why an identifier
    // immediate token is created to solve this concern.
    visibility_modifiers: ($) =>
        prec.left(
            choice(
                'pub',
                '__global',
            )
        ),

    mutability_modifiers: ($) =>
      prec.left(
        choice(
          seq('mut', optional('static')),
          'shared'
        )
      ),

    mutable_expression: ($) =>
      prec(
        PREC.resolve,
        seq(
          $.mutability_modifiers,
          $._expression
        )
      ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

    // TODO: any expression on the right that is recognized
    // as external tokens will be deduced as separate nodes
    // instead of having under the same expression_list node
    _expression_list_repeat1: ($) =>
      seq(
        choice(
          $._expression,
          $.mutable_expression
        ),
        repeat1(
          seq(
            ",",
            choice(
              $._expression,
              $.mutable_expression
            )
          )
        )
      ),

    _type: ($) => choice($.plain_type, $.option_type, $.result_type, $.multi_return_type),

    option_type: ($) =>
      prec.right(
        seq("?", optional($._type))
      ),

    plain_type: ($) =>
      prec.right(PREC.primary,
        choice(
          $.type_reference_expression,
          // $.builtin_type,
          $._binded_type,
          $.qualified_type,
          $.pointer_type,
          $.array_type,
          $.fixed_array_type,
          $.function_type,
          $.generic_type,
          $.map_type,
          $.channel_type,
          $.shared_type,
          $.thread_type,
          $.none_type,
        ),
      ),

    _binded_type: ($) => prec.right(alias($.binded_identifier, $.binded_type)),

    generic_type: ($) =>
      seq(choice($.qualified_type, $.type_reference_expression), $.type_parameters),

    qualified_type: ($) =>
      seq(
        field("module", $.identifier),
        ".",
        field("name", $.type_reference_expression)
      ),

    _statement_list: ($) =>
      repeat1(seq(
        $._statement,
        optional($._automatic_separator)
      )),

    _statement: ($) =>
      choice(
        $.simple_statement,
        $.assert_statement,
        $.continue_statement,
        $.break_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.spawn_statement,
        $.goto_statement,
        $.labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.compile_time_for_statement,
        $.send_statement,
        $.block,
        $.hash_statement
      ),

    simple_statement: ($) =>
      choice(
        $.var_declaration,
        $._expression,
        $.inc_statement,
        $.dec_statement,
        $.assignment_statement,
      ),

    var_declaration: ($) =>
      prec.right(
          seq(
              field("var_list", $.expression_list),
              ":=",
              field("expression_list", $.expression_list)
          )
      ),

    assert_statement: ($) => seq('assert', $._expression),

    block: ($) =>
      seq(
        "{",
        optional(choice(
          $._statement_list,
          alias($._expression_list_repeat1, $.expression_list),
          alias($.empty_labeled_statement, $.labeled_statement),
          seq(
            $._statement_list,
            choice(
              alias($._expression_list_repeat1, $.expression_list),
              alias($.empty_labeled_statement, $.labeled_statement)
            )
          )
        )),
        "}"
      ),

    unsafe_expression: ($) => seq('unsafe', $.block),

    function_type: ($) =>
      prec.right(
        seq(
          'fn',
          field(
            "signature",
            $.signature
          ),
        )
      ),

    return_statement: ($) =>
      prec.right(seq('return', optional(field("expression_list", $.expression_list)))),

    go_statement: ($) => seq('go', $._expression),

    _definite_range: ($) =>
      prec(
        PREC.multiplicative,
        seq(
          field('start', $._expression),
          choice('..', '...'),
          field('end', $._expression)
        )
      ),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", choice(
            $._expression,
            $.compile_time_identifier
          )),
          ".",
          field(
            "field",
            choice(
              $.reference_expression,
              // $.type_reference_expression,
              $.compile_time_identifier,
              $.compile_time_selector_expression
            )
          )
        )
      ),

    index_expression: ($) =>
      prec.right(
        PREC.primary,
        seq(
          field("operand", $._expression),
          "[",
          field("index", $._expression),
          "]",
          optional($.error_propagate)
        )
      ),

    if_expression: ($) =>
      seq(
        'if',
        choice(
          field("condition", $._expression),
          field("guard", $.var_declaration)
        ),
        field("block", $.block),
        optional(
          seq(
            'else',
            field("else_branch", choice($.block, $.if_expression))
          )
        )
      ),

    is_expression: ($) =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $._expression),
          'is',
          field("right", choice($.option_type, $.plain_type))
        )
      ),

    match_expression: ($) =>
      seq(
        'match',
        field("condition", choice($._expression, $.mutable_expression)),
        "{",
        repeat($.expression_case),
        optional($.default_case),
        "}"
      ),

    case_list: ($) =>
      comma_sep1(
        choice(
          $._expression,
          $.plain_type,
          alias($._definite_range, $.range)
        )
      ),

    expression_case: ($) =>
      seq(
        field("value", $.case_list),
        field("consequence", $.block)
      ),

    default_case: ($) => seq('else', field("consequence", $.block)),
